--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-ipywidgets==7.7.1
-matplotlib==3.7.0
-numpy==1.24.2
-pandas==1.5.3
-torch==1.12.1
-torchvision==0.13.1
-tqdm==4.64.0
+ipywidgets==8.1.2
+matplotlib==3.8.4
+numpy==1.26.4
+pandas==2.2.1
+torch==2.2.2
+torchvision==0.17.2
+tqdm==4.66.2
+scipy==1.13.0
+joblib==1.3.2
+threadpoolctl==3.4.0
+scikit-learn==1.4.1.post1
+tensorflow==2.16.1
